pushing updates on shana
